deploy/k8s/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webdav-server
  namespace: tools
  labels:
    app.kubernetes.io/name: webdav
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: webdav
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webdav
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: webdav
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webdav
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: webdav
    spec:
      containers:
        - name: webdav-server
          image: harbor.k8s.lan/proxy-cache-dockerhub/ugeek/webdav:amd64
          ports:
            - name: http
              containerPort: 80
          resources: {}
          volumeMounts:
            - name: webdav-server-data
              mountPath: /media
              readOnly: false
      volumes:
        - name: webdav-server-data
          persistentVolumeClaim:
            claimName: pvc-nfs-webdav-server-data
      imagePullSecrets:
        - name: harbor-registry-creds

---
kind: Service
apiVersion: v1
metadata:
  name: webdav-server
  namespace: tools
  labels:
    app.kubernetes.io/name: webdav
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: webdav
spec:
  selector:
    app.kubernetes.io/name: webdav
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: webdav
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webdav-server
  namespace: tools
  labels:
    app.kubernetes.io/name: webdav
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: webdav
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20480m
spec:
  ingressClassName: nginx-private
  rules:
    - host: "webdav.k8s.lan"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webdav-server
                port:
                  name: http
